@startuml
'https://plantuml.com/sequence-diagram

entity Users {
    user_id
    --
    username
    --
    password
    --
    chat_id
    --
    first_name
    --
    last_name
    --
    uid
}

entity Users_roles {
    user_role_id
    --
    role_id
    --
    user_id
}

entity Roles {
    role_id
    --
    role_name
    --
    description
}

entity Addresses {
    address_id
    --
    city
    --
    street
    --
    house_number
}

entity Vendors {
    vendor_id
    --
    company_name
    --
    phone_support_service
}

entity Stations {
   station_id
   --
   station_name
   --
   login
   --
   password
   --
   manager_id
   --
   vendor_id
   --
   address_id
   --
   station_state
}

entity Charge_sessions {
    session_id
    --
    user_id
    --
    station_id
    --
    start_time
    --
    stop_time
    --
    stop_reason
}

Users -- Stations
Users -- Users_roles
Users_roles -- Roles
Users -- Charge_sessions
Addresses -- Stations
Vendors -- Stations
Stations -- Charge_sessions

@enduml